# module-gabmacn-rust

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
crates/gmn/: Cargo.toml
crates/gmn/src/: lib.rs
crates/gmn_core/: Cargo.toml  build_output.txt
crates/gmn_core/examples/: basic_tracing.rs  error_handling.rs  prompt_demo.rs  third_party_error_display.rs
crates/gmn_core/examples/instrumentation/: main.rs
crates/gmn_core/examples/instrumentation/domains/: api.rs  auth.rs  database.rs  mod.rs  rate_limit.rs
crates/gmn_core/src/: error_display.rs  errors.rs  lib.rs  print_pretty_error.rs  prompt.rs
crates/gmn_core/src/domain/: mod.rs
crates/gmn_core/src/tracing/: instrumentation.rs  mod.rs  setup.rs
crates/gmn_nail/: Cargo.toml
crates/gmn_nail/src/: lib.rs
examples/: call_chutes.rs  demo_error.rs
gmn/examples/: a.rs
gmn_core/: Cargo.toml
gmn_core/examples/: basic_tracing.rs  error_handling.rs  instrumentation.rs
gmn_core/src/: config.rs  error_display.rs  errors.rs  instrumentation.rs  lib.rs  printPrettyError.rs  print_pretty_error.rs  tracing_setup.rs
gmn_core/src/domains/: api.rs  auth.rs  database.rs  mod.rs  rate_limit.rs
gmn_nail/: Cargo.toml
src/: lib.rs
src/core/: mod.rs
src/core/errors/: errors.json  mod.rs  printPrettyError.rs  registry.rs
src/core/errors/codes/: core.rs  mod.rs
src/core/types/: mod.rs
src/modules/: mod.rs
src/modules/nail/: README.md  mod.rs  prelude.rs
src/modules/nail/LLMs/: mod.rs
src/modules/nail/LLMs/api/: LLMAgent.rs  mod.rs
src/modules/nail/LLMs/api/chat/: ChatAgent.rs  mod.rs
src/modules/nail/LLMs/providers/: ChutesProvider.rs  LLMProvider.rs  mod.rs
src/modules/nail/LLMs/schemas/: mod.rs
src/modules/nail/LLMs/schemas/Chutes/: mod.rs  types.rs
src/modules/nail/LLMs/schemas/OpenAI/: mod.rs  types.rs
src/modules/nail/LLMs/schemas/Standard/: mod.rs  types.rs
src/modules/nail/types/: llms.rs  mod.rs
src/types/: mod.rs
