[package]
name = "gabmacn"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { "version" = "1.0.228", "features" = ["derive"] }
serde_json = "1.0.149"
colored = "3.0.0"
thiserror = "2.0.17"
chrono = "0.4.42"
textwrap = "0.16.2"
regex = "1.12.2"
unicode-width = "0.2.2"
terminal_size = "0.3"
bitflags = "2.10.0"
async-trait = "0.1.89"
dotenv = "0.15.0"

[features]
default = ["nail"]
nail = []
