[workspace]
resolver = "3"
members = ["crates/gmn_core", "crates/gmn_nail", "crates/gmn"]

[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
