[package]
name = "gmn_core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
colored = "2"
terminal_size = "0.4"
textwrap = "0.16"
unicode-width = "0.2"
