[package]
name = "gmn_core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
wrap-ansi = "0.1"
inquire = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
colored = "3"
terminal_size = "0.4"
textwrap = "0.16"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "v7"] }
secrecy = "0.10"
palette = "0.7"
semver = "1"
ammonia = "4"
geo = "0.32"
glam = "0.32"
bytesize = "2"
